Signed-off-by: PasinduW99 <pwathsara@gmail.com>

--- a/src/main/webapp/inward/inward_bill_professional_estimate.xhtml
+++ b/src/main/webapp/inward/inward_bill_professional_estimate.xhtml
@@ -90,7 +90,7 @@
                             action="#{patientController.navigateToOpdPatientProfile()}" 
                             >
                             <f:setPropertyActionListener 
-                                value="#{opdBillController.patient}" 
+                                value="#{inwardProfessionalBillController.current.patient}" 
                                 target="#{patientController.current}" ></f:setPropertyActionListener>
                         </p:commandButton>
                     </h:panelGrid>
