--- a/src/main/webapp/inward/inward_timed_service_consume.xhtml
+++ b/src/main/webapp/inward/inward_timed_service_consume.xhtml
@@ -70,7 +70,7 @@
                             action="#{patientController.navigateToOpdPatientProfile()}" 
                             >
                             <f:setPropertyActionListener 
-                                value="#{opdBillController.patient}" 
+                                value="#{inwardTimedItemController.current.patientEncounter.patient}" 
                                 target="#{patientController.current}" ></f:setPropertyActionListener>
                         </p:commandButton>
                     </h:panelGrid>
