--- a/src/main/webapp/admin/items/metadata_super_category.xhtml
+++ b/src/main/webapp/admin/items/metadata_super_category.xhtml
@@ -13,110 +13,96 @@
         <h:panelGroup >
             <h:form  >
                 <p:growl />
-                <p:focus id="selectFocus" context="gpSelect" />
-                <p:focus id="detailFocus" context="gpDetail" />
+                <p:focus id="selectFocus" for="lstSelect"  />
+                <p:focus id="detailFocus" for="txtName"/>
 
 
- 
+
                 <p:panel header="Manage Category Tube" >
-                    <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop" >
+                    <div class="row">
+                        <div class="col-md-6">
+                            <p:defaultCommand target="btnAdd" ></p:defaultCommand>
+                            <p:commandButton id="btnAdd" value="Add" action="#{metadataSuperCategoryController.prepareAdd()}" class=" m-1 ui-button-success w-25"
+                                             process="btnAdd" update="gpDetail lstSelect">
+                               
+                            </p:commandButton>
+                            <p:commandButton id="btnDelete" onclick="if (!confirm('Are you sure you want to delete this record?'))
+                                        return false;" action="#{metadataSuperCategoryController.delete()}"  value="Delete" class=" m-1 ui-button-danger w-25" 
+                                        process="btnDelete" update="gpDetail lstSelect">
+                            </p:commandButton>
+                            <p:selectOneListbox  id="lstSelect" filter="true" class="w-100" value="#{metadataSuperCategoryController.current}">
+                                <f:selectItems  value="#{metadataSuperCategoryController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
+                                <p:ajax update="gpDetail" process="lstSelect" >
+                                </p:ajax>
+                            </p:selectOneListbox>
+                        </div>
+                        <div class="col-md-6">
+                            <p:panelGrid id="gpDetail" columns="1">
+                                <h:panelGrid id="gpDetailText" columns="2">
+                                    <h:outputText id="lblName" value="Name" ></h:outputText>
+                                    <h:inputText autocomplete="off" id="txtName" value="#{metadataSuperCategoryController.current.name}"  style="width: 450px;"></h:inputText>
 
-                        <h:panelGrid id="gpSelect" columns="1" styleClass="alignTop"  >
-                            <p:panel >
-                                <h:panelGrid id="gpSelectText" >
-                                    <p:selectOneListbox  id="lstSelect"  scrollHeight="500" class="w-100" style="min-width: 400px"  value="#{metadataSuperCategoryController.current}">
-                                        <f:selectItems  value="#{metadataSuperCategoryController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
-                                        <f:ajax render="gpDetail" execute="lstSelect" >
-                                        </f:ajax>
-                                    </p:selectOneListbox>
+
+
                                 </h:panelGrid>
-                                <h:panelGrid id="gpSelectButtons" columns="3"  >
-                                    <p:defaultCommand target="btnAdd" ></p:defaultCommand>
-                                    <h:commandButton id="btnAdd" value="Add" action="#{metadataSuperCategoryController.prepareAdd()}" styleClass="buttons" >
-                                        <f:ajax render="btnAdd  btnDelete btnSave   lstSelect gpDetail detailFocus" execute="" >
-                                        </f:ajax>
-                                    </h:commandButton>
-                                    <h:commandButton id="btnDelete" onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                                return false;" action="#{metadataSuperCategoryController.delete()}"  value="Delete"  >
-                                    </h:commandButton>
-                                </h:panelGrid>
-                            </p:panel>
-                        </h:panelGrid  >
 
-                        <p:panel style="height: 550px">
-                            <p:panel id="gpDetail">
-                                <h:panelGrid columns="1">
-                                    <h:panelGrid id="gpDetailText" columns="2">
-                                        <h:outputText id="lblName" value="Name" ></h:outputText>
-                                        <h:inputText autocomplete="off" id="txtName" value="#{metadataSuperCategoryController.current.name}"  style="width: 450px;"></h:inputText>
+                                <p:panel header="New Value" >
+                                    <table >
+                                        <tr>
+                                            <td>
+                                                <h:inputText id="txtNewMetaCatName" value="#{metadataSuperCategoryController.catName}" ></h:inputText>
+                                                <p:watermark for="txtNewMetaCatName" value="Enter the new value here" ></p:watermark>
+                                            </td>
+                                            <td>
 
+                                                <p:commandButton id="btnAddNewCat"
+                                                                 ajax="false"
+                                                                 process="btnAddNewCat txtNewMetaCatName" 
+                                                                 value="Add New Value"
+                                                                 update="repeatSubCats txtNewMetaCatName"
+                                                                 action="#{metadataSuperCategoryController.addCatName()}" 
+                                                                 ></p:commandButton>
 
+                                            </td>
+                                        </tr>
+                                    </table>
+                                    <table >
+                                        <tr>
+                                            <th>
+                                                Already Added Values
+                                            </th>
+                                        </tr>
+                                        <tr>
+                                            <td >
 
-                                    </h:panelGrid>
-
-                                    <p:panel header="New Value" >
-                                        <table >
-                                            <tr>
-                                                <td>
-                                                    <h:inputText id="txtNewMetaCatName" value="#{metadataSuperCategoryController.catName}" ></h:inputText>
-                                                    <p:watermark for="txtNewMetaCatName" value="Enter the new value here" ></p:watermark>
-                                                </td>
-                                                <td>
-
-                                                    <p:commandButton id="btnAddNewCat"
-                                                                   ajax="false"
-                                                                     process="btnAddNewCat txtNewMetaCatName" 
-                                                                     value="Add New Value"
-                                                                     update="repeatSubCats txtNewMetaCatName"
-                                                                    action="#{metadataSuperCategoryController.addCatName()}" 
-                                                                     ></p:commandButton>
-
-                                                </td>
-                                            </tr>
-                                        </table>
-                                        <table >
-                                            <tr>
-                                                <th>
-                                                    Already Added Values
-                                                </th>
-                                            </tr>
-                                            <tr>
-                                                <td >
-
-                                                    <table >
-                                                        <ui:repeat id="repeatSubCats" value="#{metadataSuperCategoryController.metadatingaCategories}" var="mdc" >
+                                                <table >
+                                                    <ui:repeat id="repeatSubCats" value="#{metadataSuperCategoryController.metadatingaCategories}" var="mdc" >
+                                                        <tr>
                                                             <tr>
-                                                                <tr>
-                                                                    <td>
-                                                                        <h:inputText id="txtMdcName" value="#{mdc.name}" >
-                                                                            <f:ajax listener="#{metadataSuperCategoryController.editMetadataCategory(mdc)}" event="blur" 
-                                                                                    execute="@this" 
-                                                                                    ></f:ajax>
-                                                                        </h:inputText>
-                                                                    </td>
+                                                                <td>
+                                                                    <h:inputText id="txtMdcName" value="#{mdc.name}" >
+                                                                        <f:ajax listener="#{metadataSuperCategoryController.editMetadataCategory(mdc)}" event="blur" 
+                                                                                execute="@this" 
+                                                                                ></f:ajax>
+                                                                    </h:inputText>
+                                                                </td>
 
-                                                                </tr>
                                                             </tr>
-                                                        </ui:repeat>
-                                                    </table>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </p:panel>
+                                                        </tr>
+                                                    </ui:repeat>
+                                                </table>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </p:panel>
 
+                            </p:panelGrid>
+                            <p:commandButton id="btnSave" value="Save" action="#{metadataSuperCategoryController.saveSelected()}" class=" m-1 ui-button-warning w-25" process="btnSave gpDetail" update="lstSelect">
+                                   
+                                </p:commandButton>
+                        </div>
+                    </div>
 
-                                    <h:panelGrid id="gpDetailButtons" columns="2">
-                                        <h:commandButton id="btnSave" value="Save" action="#{metadataSuperCategoryController.saveSelected()}" styleClass="buttons">
-                                            <f:ajax render="btnAdd  btnDelete btnSave   lstSelect gpDetail selectFocus"  execute="gpDetail" >
-                                            </f:ajax>
-                                        </h:commandButton>
-
-                                    </h:panelGrid>
-                                </h:panelGrid>
-                            </p:panel>
-                        </p:panel>
-
-                    </h:panelGrid>
                 </p:panel>
             </h:form>
 
