--- a/src/main/webapp/admin/institutions/collecting_centre.xhtml
+++ b/src/main/webapp/admin/institutions/collecting_centre.xhtml
@@ -13,114 +13,94 @@
         <h:panelGroup >
             <h:form  >
 
-                <p:focus id="selectFocus" context="gpSelect" />
+                <p:focus id="selectFocus" for="lstSelect" />
                 <p:focus id="detailFocus" context="gpDetail" />
 
 
 
                 <p:panel header="Manage Collecting Centres">
-                    <h:panelGrid id ="gpVeda" columns="4" styleClass="alignTop"  style="height: 200px">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <p:commandButton id="btnAdd" value="Add New" class=" m-1 ui-button-success w-25"  
+                                             action="#{collectingCentreController.prepareAdd()}" 
+                                             process="btnAdd"
+                                             update="lstSelect gpDetail"/>
+                            <p:commandButton id="btnDelete" onclick="if (!confirm('Are you sure you want to delete this record?'))
+                                        return false;" action="#{collectingCentreController.delete()}"  
+                                             value="Delete" 
+                                             class=" m-1 ui-button-danger w-25"
+                                             process="btnDelete"
+                                             update="lstSelect gpDetail"/>
 
-                        <div class="row" >
+                            <p:selectOneListbox  id="lstSelect" class="w-100" value="#{collectingCentreController.current}"  filter="true">
+                                <f:selectItems  value="#{collectingCentreController.selectedItems}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
+                                <p:ajax update="gpDetail" process="lstSelect" >
+                                </p:ajax>
+                            </p:selectOneListbox>
 
-                            <div class="col-md-4">
-                                <h:panelGrid id="gpSelect" columns="1" style="height: 200px; width: 400px" >
-                                    <p:panel style="height: 400px" >
-                                        <f:facet name="header" >
-                                            <p:outputLabel value="Collecting Centers"  />
-                                            <p:commandButton id="btnAdd" value="Add New" style="float: right;"  update="gpDetail"
-                                                             action="#{collectingCentreController.prepareAdd()}" styleClass="buttons" />
-
-                                        </f:facet>
-                                        <h:panelGrid id="gpSelectText" >
-                                            <p:inputText style="min-width: 400px" autocomplete="off" id="txtSearch" value="#{collectingCentreController.selectText}" >
-                                                <f:ajax execute="txtSearch" render="lstSelect" event="keyup" />
-                                            </p:inputText>
-                                            <p:selectOneListbox  id="lstSelect" class="w-100" scrollHeight="500"  value="#{collectingCentreController.current}" style="min-width: 400px" >
-                                                <f:selectItems  value="#{collectingCentreController.selectedItems}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
-                                                <f:ajax render="gpDetail " execute="lstSelect" >
-                                                </f:ajax>
-                                            </p:selectOneListbox>
-                                        </h:panelGrid>
-                                        <h:panelGrid id="gpSelectButtons" columns="1"  >
-                                            <p:commandButton id="btnDelete" onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                                return false;" action="#{collectingCentreController.delete()}"  value="Delete"  />
-                                        </h:panelGrid>
-                                    </p:panel>
-                                </h:panelGrid  >
-                            </div>
-
-                            <div class="col-md-8">
-                                <p:panel style="width:650px; height: 400px">
-                                    <p:panel id="gpDetail" >
-                                        <f:facet name="header" >
-                                            <p:outputLabel value="Details" />
-                                            <p:commandButton id="btnSave" value="Save" action="#{collectingCentreController.saveSelected()}" 
-                                                             styleClass="buttons" style="float: right;" update="gpVeda" />
-                                            <p:defaultCommand target="btnSave"/>
-                                        </f:facet>
-                                        <h:panelGrid id="gpDetailText" columns="2">
-                                            <h:outputText id="lblName" value="Name"  ></h:outputText>
-                                            <p:inputText autocomplete="off" id="txtName" 
-                                                         styleClass="longText"
-                                                         style="min-width: 500px" 
-                                                         value="#{collectingCentreController.current.name}"  ></p:inputText>
-
-                                            <h:outputText id="lblChqPrnName" value="Printi Name" ></h:outputText>
-                                            <p:inputText autocomplete="off" id="txtChqPrnName" 
-                                                         styleClass="longText"
-                                                         value="#{collectingCentreController.current.chequePrintingName}"  style="min-width: 500px" ></p:inputText>
-
-                                            <h:outputText value="Code" >                                        
-                                            </h:outputText>
-                                            <p:inputText autocomplete="off"  value="#{collectingCentreController.current.institutionCode}"  style="min-width: 500px" >
-                                            </p:inputText> 
-
-                                            <h:outputText value="Descreption" >                                        
-                                            </h:outputText>
-                                            <p:inputTextarea styleClass="longText" value="#{collectingCentreController.current.descreption}" style="min-width: 500px"  >
-                                            </p:inputTextarea> 
-
-                                            <h:outputText value="Credit Limit" >                                        
-                                            </h:outputText>
-                                            <p:inputText autocomplete="off"  value="#{collectingCentreController.current.allowedCredit}"  style="min-width: 500px" >
-                                            </p:inputText>
-
-                                            <h:outputText id="lblPhone" value="Phone" ></h:outputText>
-                                            <p:inputText autocomplete="off" id="txtPhone" value="#{collectingCentreController.current.phone}"  style="min-width: 500px" ></p:inputText>
-
-                                            <h:outputText id="lblFax" value="Fax" ></h:outputText>
-                                            <p:inputText autocomplete="off" id="txtFax" value="#{collectingCentreController.current.fax}" style="min-width: 500px"  ></p:inputText>
-
-                                            <h:outputText id="lblEMail" value="Email" ></h:outputText>
-                                            <p:inputText autocomplete="off" id="txtEmail" value="#{collectingCentreController.current.email}" style="min-width: 500px"  ></p:inputText>
-
-                                            <h:outputText id="lblAdress" value="Address" ></h:outputText>
-                                            <p:inputTextarea id="txtAdress" value="#{collectingCentreController.current.address}" styleClass="longText" style="min-width: 500px"  ></p:inputTextarea>
-
-                                            <h:outputText id="lblWeb" value="Web" ></h:outputText>
-                                            <p:inputText autocomplete="off" id="txtWeb" value="#{collectingCentreController.current.web}" style="min-width: 500px"  ></p:inputText>
-
-                                            <h:outputText id="lblAcc" value="Account No" ></h:outputText>
-                                            <p:inputText autocomplete="off" id="txtAcc" value="#{collectingCentreController.current.accountNo}" style="min-width: 500px"  ></p:inputText>
-
-                                            <h:outputText value="Creater" ></h:outputText>
-                                            <h:outputText value="#{collectingCentreController.current.creater.webUserPerson.name}" ></h:outputText>
-
-                                            <h:outputText value="Created At" ></h:outputText>
-                                            <h:outputText value="#{collectingCentreController.current.createdAt}" >
-                                                <f:convertDateTime pattern="#{sessionController.applicationPreference.longDateTimeFormat}"  />
-                                            </h:outputText>
-                                        </h:panelGrid>
-                                    </p:panel>
-                                </p:panel>
-                            </div>
                         </div>
+                        <div class="col-md-6">
+                            <p:panel id="gpDetail" header="Details" class="w-100">
 
+                                <h:panelGrid id="gpDetailText" columns="2" class="w-100">
+                                    <h:outputText id="lblName" value="Name"  ></h:outputText>
+                                    <p:inputText autocomplete="off" id="txtName" 
+                                                 styleClass="longText"
+                                                 class="w-100"
+                                                 value="#{collectingCentreController.current.name}"  ></p:inputText>
 
+                                    <h:outputText id="lblChqPrnName" value="Printi Name" ></h:outputText>
+                                    <p:inputText autocomplete="off" id="txtChqPrnName" 
+                                                 class="w-100"
+                                                 value="#{collectingCentreController.current.chequePrintingName}" ></p:inputText>
 
+                                    <h:outputText value="Code" >                                        
+                                    </h:outputText>
+                                    <p:inputText autocomplete="off"  value="#{collectingCentreController.current.institutionCode}"  class="w-100">
+                                    </p:inputText> 
 
-                    </h:panelGrid>
+                                    <h:outputText value="Descreption" >                                        
+                                    </h:outputText>
+                                    <p:inputTextarea styleClass="longText" value="#{collectingCentreController.current.descreption}" class="w-100" >
+                                    </p:inputTextarea> 
+
+                                    <h:outputText value="Credit Limit" >                                        
+                                    </h:outputText>
+                                    <p:inputText autocomplete="off"  value="#{collectingCentreController.current.allowedCredit}"  class="w-100">
+                                    </p:inputText>
+
+                                    <h:outputText id="lblPhone" value="Phone" ></h:outputText>
+                                    <p:inputText autocomplete="off" id="txtPhone" value="#{collectingCentreController.current.phone}"  class="w-100"></p:inputText>
+
+                                    <h:outputText id="lblFax" value="Fax" ></h:outputText>
+                                    <p:inputText autocomplete="off" id="txtFax" value="#{collectingCentreController.current.fax}" class="w-100" ></p:inputText>
+
+                                    <h:outputText id="lblEMail" value="Email" ></h:outputText>
+                                    <p:inputText autocomplete="off" id="txtEmail" value="#{collectingCentreController.current.email}" class="w-100" ></p:inputText>
+
+                                    <h:outputText id="lblAdress" value="Address" ></h:outputText>
+                                    <p:inputTextarea id="txtAdress" value="#{collectingCentreController.current.address}" styleClass="longText" class="w-100" ></p:inputTextarea>
+
+                                    <h:outputText id="lblWeb" value="Web" ></h:outputText>
+                                    <p:inputText autocomplete="off" id="txtWeb" value="#{collectingCentreController.current.web}" class="w-100" ></p:inputText>
+
+                                    <h:outputText id="lblAcc" value="Account No" ></h:outputText>
+                                    <p:inputText autocomplete="off" id="txtAcc" value="#{collectingCentreController.current.accountNo}" class="w-100" ></p:inputText>
+
+                                    <h:outputText value="Creater" ></h:outputText>
+                                    <h:outputText value="#{collectingCentreController.current.creater.webUserPerson.name}" ></h:outputText>
+
+                                    <h:outputText value="Created At" ></h:outputText>
+                                    <h:outputText value="#{collectingCentreController.current.createdAt}" >
+                                        <f:convertDateTime pattern="#{sessionController.applicationPreference.longDateTimeFormat}"  />
+                                    </h:outputText>
+                                </h:panelGrid>
+                                <p:commandButton id="btnSave" value="Save" action="#{collectingCentreController.saveSelected()}" 
+                                               class=" m-1 ui-button-warning w-25" process="gpDetail btnSave" update="lstSelect" />
+                                <p:defaultCommand target="btnSave"/>
+                            </p:panel>
+                        </div>
+                    </div>
                 </p:panel>
             </h:form>
 
